--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="#" style="margin-left: 50px;">
-                <img src="logo%20(2).jpeg" alt="Logo" style="width: 350px; height: 130px">
+                <img src="./service3_files/PRINTERS_CLUB_group_of_company_LOGO.png" alt="Logo" style="width: 320px; height: 130px">
             </a>
 
             <style>
