--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<header>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="#" style="margin-left: 50px;">
+            <a class="navbar-brand " href="#" style="margin-left:20px;">
                 <img src="./service3_files/PRINTERS_CLUB_group_of_company_LOGO.png" alt="Logo" style="width: 320px; height: 130px">
             </a>
 
@@ -136,14 +136,13 @@
             </button>
         </div>
 
-      <div class="container text-center">
+      <div class="container text-center" style="background-color: red;">
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="#home" style="color:black;"><b>HOME</b></a></li>
             <li class="nav-item"><a class="nav-link" href="#about" style="color: BLACK;"><b>ABOUT</b></a></li>
             <li class="nav-item"><a class="nav-link" href="#service" style="color: black;"><b> SERVICES</b></a></li>
             <li class="nav-item"><a class="nav-link" href="joinus.html" style="color: black;"><b>JOIN US</b></a></li>
-           
             <li class="nav-item"><a class="nav-link" href="#contact" style="color:black;"><b>CONTACT</b></a></li>
 			 <li class="nav-item"><a class="nav-link" href="login.html" style="color: black;"><b>LOGIN</b></a></li>
         </ul>
