--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </button>
         </div>
 
-      <div class="container text-center" style="background-color: red;">
+      <div class="container text-center">
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="#home" style="color:black;"><b>HOME</b></a></li>
