--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand " href="#" style="margin-left:20px;">
-                <img src="./service3_files/PRINTERS_CLUB_group_of_company_LOGO.png" alt="Logo" style="width: 320px; height: 130px">
+                <!-- <img src="./service3_files/PRINTERS_CLUB_group_of_company_LOGO.png" alt="Logo" style="width: 320px; height: 130px"> -->
+                <h2>Flex Printing</h2>
             </a>
 
             <style>
