add card id in url

--- a/visitingCardCato.html
+++ b/visitingCardCato.html
@@ -201,9 +201,8 @@
                 </div>
                 <div class="row" style="margin-top:20px;">
 
-                    <div class="center col-lg-4 col-md-4"
-                        onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                        <a href="priceCalculater.html"><img
+                    <div class="center col-lg-4 col-md-4" onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
+                        <a href="priceCalculater.html#card=Velvet+Gold+DieCut"><img
                                 title="Hundreds of free visiting card designs | Free downloads"
                                 alt="Hundreds of free visiting card designs | Free downloads"
                                 src="./Visiting Card Image/velvet + Gold.jpg"></a><br>
@@ -211,9 +210,8 @@
                         <div style="color:orange;margin-top:-5px; font-size: 16px;">400 GSM Paper , Velvet Lamination</div>
                         <div style="color:orange;margin-top:-5px; font-size: 12px;">Production Time: 2 Days </div>
                         </div>
-                        <div class="center col-lg-4 col-md-4"
-                        onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                        <a href="priceCalculater.html"><img
+                        <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
+                        <a href="priceCalculater.html#1"><img
                                 title="Hundreds of free visiting card designs | Free downloads"
                                 alt="Hundreds of free visiting card designs | Free downloads"
                                 src="./Visiting Card Image/matt + gold.jpg"></a><br>
@@ -221,8 +219,7 @@
                         <div style="color:orange;margin-top:-5px; font-size: 16px;">Matt Lamination</div>
                         <div style="color:orange;margin-top:-5px; font-size: 12px;">Production Time: 5 Days </div>
                         </div>
-                        <div class="center col-lg-4 col-md-4"
-                        onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
+                        <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
                         <a href="priceCalculater.html"><img
                                 title="Hundreds of free visiting card designs | Free downloads"
                                 alt="Hundreds of free visiting card designs | Free downloads"
@@ -233,8 +230,7 @@
                         </div>
                 </div>
                 <div class="row" style="margin-top:20px;">
-                    <div class="center col-lg-4 col-md-4"
-                    onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
+                    <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
                     <a href="priceCalculater.html"><img
                             title="Hundreds of free visiting card designs | Free downloads"
                             alt="Hundreds of free visiting card designs | Free downloads"
@@ -243,8 +239,7 @@
                     <div style="color:orange;margin-top:-5px; font-size: 16px;">400 GSM Paper Matt Lamination</div>
                     <div style="color:orange;margin-top:-5px; font-size: 12px;">Production Time: 5 Days </div>
                     </div>
-                    <div class="center col-lg-4 col-md-4"
-                    onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
+                    <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
                     <a href="priceCalculater.html"><img
                             title="Hundreds of free visiting card designs | Free downloads"
                             alt="Hundreds of free visiting card designs | Free downloads"
