--- a/visitingCardCato.html
+++ b/visitingCardCato.html
@@ -202,7 +202,7 @@
                 <div class="row" style="margin-top:20px;">
 
                     <div class="center col-lg-4 col-md-4" onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                        <a href="priceCalculater.html#card=Velvet+Gold+DieCut"><img
+                        <a href="priceCalculater.html?card=Velvet+Gold+DieCut"><img
                                 title="Hundreds of free visiting card designs | Free downloads"
                                 alt="Hundreds of free visiting card designs | Free downloads"
                                 src="./Visiting Card Image/velvet + Gold.jpg"></a><br>
@@ -211,7 +211,7 @@
                         <div style="color:orange;margin-top:-5px; font-size: 12px;">Production Time: 2 Days </div>
                         </div>
                         <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                        <a href="priceCalculater.html#1"><img
+                        <a href="priceCalculater.html?card=Velvet + Gold + Die Cut (400 GSM)"><img
                                 title="Hundreds of free visiting card designs | Free downloads"
                                 alt="Hundreds of free visiting card designs | Free downloads"
                                 src="./Visiting Card Image/matt + gold.jpg"></a><br>
@@ -220,7 +220,7 @@
                         <div style="color:orange;margin-top:-5px; font-size: 12px;">Production Time: 5 Days </div>
                         </div>
                         <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                        <a href="priceCalculater.html"><img
+                        <a href="priceCalculater.html?card=Velvet + Gold + Die Cut (800 GSM)"><img
                                 title="Hundreds of free visiting card designs | Free downloads"
                                 alt="Hundreds of free visiting card designs | Free downloads"
                                 src="./Visiting Card Image/MATT + GOLD + DIE CUT (800 GSM) -.jpg"></a><br>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="row" style="margin-top:20px;">
                     <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                    <a href="priceCalculater.html"><img
+                    <a href="priceCalculater.html?card=Matt + Gold"><img
                             title="Hundreds of free visiting card designs | Free downloads"
                             alt="Hundreds of free visiting card designs | Free downloads"
                             src="./Visiting Card Image/matt gold.jpg"></a><br>
@@ -240,7 +240,7 @@
                     <div style="color:orange;margin-top:-5px; font-size: 12px;">Production Time: 5 Days </div>
                     </div>
                     <div class="center col-lg-4 col-md-4"onclick="location.href=&quot;t_ViewTemplates.aspx?CID=2&amp;title=Die Cut Visiting Card&amp;sTitle=List of Die Shapes for premium visiting cards&quot;">
-                    <a href="priceCalculater.html"><img
+                    <a href="priceCalculater.html?card=Texture"><img
                             title="Hundreds of free visiting card designs | Free downloads"
                             alt="Hundreds of free visiting card designs | Free downloads"
                             src="./Visiting Card Image/texture.jpg"></a><br>
@@ -264,6 +264,8 @@
         <!-- Footer Scripts ============================================= -->
         <script type="text/javascript" src="./service4_files/functions.js.download"></script>
 
+        
+            
 
         <script type="text/javascript">
             //<![CDATA[
