--- a/priceCalculater.html
+++ b/priceCalculater.html
@@ -14,7 +14,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="priceCalculater.css">
-    <style>
+    <!-- <style>
 
 
 @media (min-width: 992px) {
@@ -116,7 +116,8 @@ header {
     }
 }
 
-    </style>
+    </style> -->
+
     <title>Document</title>
 </head>
 
