--- a/visitingCardCato.html
+++ b/visitingCardCato.html
@@ -129,7 +129,63 @@
 </head>
 
 <body
-    class="stretched device-xl has-plugin-easing has-plugin-bootstrap has-plugin-counter has-plugin-form has-plugin-subscribeform">
+
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand " href="#" style="margin-left:20px;">
+                <!-- <img src="./service3_files/PRINTERS_CLUB_group_of_company_LOGO.png" alt="Logo" style="width: 320px; height: 130px"> -->
+                <h2>Flex Printing</h2>
+            </a>
+
+            <style>
+                @media (max-width: 576px) {
+                    .navbar {
+                        background-color: white!important; /* Change the background color for small screens */
+                    }
+
+                    .navbar-brand img {
+                        width: 100%;
+                        height: auto;
+                        max-width: 200px;
+                        max-height: 80px;
+                    }
+                }
+
+                @media (min-width: 992px) {
+                    .navbar {
+                        background-color: white; /* Apply bg-light class on large screens */
+                    }
+                }
+            </style>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" style="color: black"></span>
+            </button>
+        </div>
+
+      <div class="container text-center">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="#home" style="color:black;"><b>HOME</b></a></li>
+            <li class="nav-item"><a class="nav-link" href="#about" style="color: BLACK;"><b>ABOUT</b></a></li>
+            <li class="nav-item"><a class="nav-link" href="#service" style="color: black;"><b> SERVICES</b></a></li>
+            <li class="nav-item"><a class="nav-link" href="joinus.html" style="color: black;"><b>JOIN US</b></a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact" style="color:black;"><b>CONTACT</b></a></li>
+             <li class="nav-item"><a class="nav-link" href="login.html" style="color: black;"><b>LOGIN</b></a></li>
+        </ul>
+    </div>
+</div>
+
+        </div>
+    </nav>
+</header>
+    
+
+
+
+    <!-- class="stretched device-xl has-plugin-easing has-plugin-bootstrap has-plugin-counter has-plugin-form has-plugin-subscribeform"> -->
     <script type="text/javascript">
         SetLoadingMessage(true);
     </script>
