--- a/visitingCardCato.html
+++ b/visitingCardCato.html
@@ -351,6 +351,66 @@
     </script>
 
 
+<footer>
+    <div class="container2" style="background-color: black">
+        <div class="info-row" style="margin-top: 30px; display: flex; flex-wrap: wrap; justify-content: space-around;">
+            <div class="additional-info" style="text-align: justify; flex-basis: 100%; max-width: 400px; margin-bottom: 20px;font-size: 22px">
+                <h3 style="font-size: 24px; color: white;text-align: justify">Useful Links</h3>
+               <style>
+    .arrow::before {
+        content: '\203A'; /* Unicode character for right-pointing single angle quotation mark */
+        color: blue;
+        margin-right: 5px; /* Adjust as needed */
+    }
+</style>
+
+<ul style="list-style-type: none; padding: 0;">
+    <li style="position: relative;"><a href="#home" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Home</a></li>
+    <li style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Services</a></li>
+    <li style="position: relative;"><a href="#blog" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>About</a></li>
+    <li style="position: relative;"><a href="#ask" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Join Us</a></li>
+    <li style="position: relative;"><a href="#contact" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Contact</a></li>
+</ul>
+
+            </div>
+           <style>
+    .arrow::before {
+        content: '\203A'; /* Unicode character for right-pointing single angle quotation mark */
+        color: blue;
+        margin-right: 5px; /* Adjust as needed */
+    }
+</style>
+
+<div class="additional-info" style="text-align: justify; flex-basis: 100%; max-width: 400px; margin-bottom: 20px; font-size: 22px;">
+    <h3 style="font-size: 24px; color: white;text-align: justify">Services</h3>
+    <ul style="list-style-type: none; padding: 0;">
+    <li id="services" style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Printing Exhibition</a></li>
+    <li id="services" style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Printing Services</a></li>
+    <li id="services" style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Buy and Sell Machines</a></li>
+    <li id="services" style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Free Design Files</a></li>
+    <li id="services" style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Paper GSM Calculator</a></li>
+    <li id="services" style="position: relative;"><a href="#services" style="font-size: 16px; color: white; text-decoration: none;"><span class="arrow"></span>Software Services</a></li>
+  
+</ul>
+
+</div>
+
+         <div class="additional-info" style="text-align: justify; flex-basis: 100%; max-width: 400px; margin-bottom: 20px; font-size: 22px;">
+    <h3 style="font-size: 24px; color: white; text-align: justify;">Contact Us</h3>
+    <p style="font-size: 16px; color: white;">
+        WhatsApp No.: <a href="https://wa.me/9579612342" style="color: white;">+91-</a><br>
+        Phone No.: <a href="tel:+91-9579612342" style="color: white;">+91-</a><br>
+        Email: <a href="mailto:saptarshjyotish@gmail.com" style="color: white;">flexprinting@gmail.com</a>
+    </p>
+</div>
+
+
+
+        </div>
+    </div>
+</footer>
+
+
 </body>
 
 </html>
