--- a/priceCalculater.html
+++ b/priceCalculater.html
@@ -209,8 +209,32 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit">
+                <input type="submit" value="Place Order">
             </form>
+        </div>
+        <div class="right">
+            <div class="img">
+                <img src="Visiting Card Image/die shapes.jpg" alt="">
+            </div>
+            <ul>
+                <h4>Production Description</h4>
+                <li>Product Ref: <a href="">VC/10th Edition (Sample File)</a></li>
+                <li>Product Code: <a href="">VC-1</a> </li>
+                <li>Product Class: <a href="">Super Premium</a> </li>
+                <li>Product Core: <a href="">Attractive Gold-Foil With Die Cut</a> </li>
+                <li>Paper Quality: <a href="">Improted 400 GSM Art Pape</a>r</li>
+                <li>Production Time: <a href="">Withi $8 hour from file upload</a></li>
+                <li>Lamination Type: <a href="">Velvet</a> </li>
+                <li>Production has soft feel with rich look</li>
+                <li>Available in 30 different and unique die shapes</li>
+                <li>Embossed Spot UV adds to the magnificence of the card</li>
+            </ul>
+           <ul>
+            <h4>Our Specialization</h4>
+            <li>We are india's No. 1 Gold-Foil Visiting card manufacturer</li>
+            <li>Printing with latest Komori offset machine (2023 model)</li>
+            <li>Innovative Advance & Equipped Post Printing Unit</li>
+           </ul>
         </div>
     </div>
 
